# motor-pdf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.ocr  ROADMAP.md  ULTP_ Especificação de Requisitos Avançada.md  docker-compose.yml  pyproject.toml  railway.staging.json
.github/workflows/: test.yml
app/: main.py  models.py  routes.py
app/agent/: agent.py  llm.py  routes.py  store.py  tools.py
app/engine/: argument_miner.py  background.py  boilerplate.py  cache.py  chunker.py  classifier.py  conformal.py  constituency_guardrail.py  coreference.py  extractor.py  formatter.py  layout.py  math.py  ocr.py  ocr_easy.py  ocr_hybrid.py  onnx_classifier.py  ordinal_segmenter.py  quality.py  reading_order.py  segmenter.py  simcse_loss.py  storage.py  tables.py  vision.py  wasserstein_cost.py
app/static/: index.html
scripts/: verify_deploy.sh
tests/: conftest.py  test_academic_pdf.py  test_agent.py  test_benchmark.py  test_boilerplate.py  test_contract.py  test_extractor.py  test_headings.py  test_integration.py  test_math.py  test_pdf.py  test_reading_order.py  test_ultp_modules.py
