[project]
name = "motor-pdf"
version = "0.4.0"
description = "Motor de extração de texto de PDFs para LLMs com Agente IA"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "PyMuPDF>=1.25",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "python-multipart>=0.0.18",
    "tiktoken>=0.9",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.9", "paddlepaddle>=3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["motor-pdf[ocr,openai,anthropic]"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
