[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "motor-pdf"
version = "0.5.0"
description = "Motor de extração de texto de PDFs com agente IA"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.22",
    "pdfplumber>=0.9",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "python-multipart>=0.0.5",
    "tiktoken>=0.5",
    "pypdf>=5.0",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.9", "paddlepaddle>=3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
advanced = ["numpy>=1.24", "ruptures>=1.1", "pot>=0.9"]
nlp = ["stanza>=1.8", "spacy>=3.7"]
ml = ["torch>=2.0", "scikit-learn>=1.3"]
conformal = ["crepes>=0.9"]
ordinal = ["spacecutter-torch>=0.1"]
segeval = ["segeval>=2.0"]
captum = ["captum>=0.7"]
outlines = ["outlines>=0.1"]
vision = ["pdf2image>=1.16", "Pillow>=10.0"]
tables = ["camelot-py>=0.11"]
easyocr = ["easyocr>=1.7"]
onnx = ["onnxruntime>=1.17"]
sentry = ["sentry-sdk>=2.0"]
test = ["pytest>=7.0", "pytest-benchmark>=5.0"]
dev = ["ruff>=0.5", "mypy>=1.10"]
all = ["motor-pdf[ocr,openai,anthropic,advanced,vision,tables,easyocr,onnx,nlp,ml,conformal,ordinal,segeval,captum,outlines,sentry,test,dev]"]
ultp = ["motor-pdf[advanced,nlp,ml,conformal,ordinal,segeval,captum,outlines]"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = false
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
